# qmlsample-dpdirector

./: CMakeLists.txt  DPDirector_zh_CN.ts  VASearchBox.qml  VAToolBar.qml  main.cpp  main.qml  qml.qrc  vadirector.cpp  vadirector.h  vasearchmodel.cpp  vasearchmodel.h
